--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "npx drizzle-kit generate"
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "tsx ./src/drizzle/migrate.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
