--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "db:generate": "npx drizzle-kit generate",
-    "db:migrate": "tsx ./src/drizzle/migrate.ts"
+    "db:migrate": "tsx ./src/drizzle/migrate.ts",
+    "db:seed": "tsx ./src/drizzle/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
