chore: install daisyui, date-fns, heroicons

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "db:seed": "tsx ./src/drizzle/seed.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.1",
+    "daisyui": "^4.12.14",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.26.2",
     "drizzle-orm": "^0.35.3",
